# Vivify-Quest-2

./: .gitignore  CMakeLists.txt  README.md  mod.template.json  ndkpath.txt  qpm.json  qpm.shared.json  qpm_defines.cmake
.github/workflows/: build-ndk.yml
cmake/: qpm.cmake  strip.cmake  utils.cmake
cmake/targets/: quest.cmake
include/: VivifyCameraApplier.hpp  VivifyHandlers.hpp  VivifyNewHandlers.inl  VivifyRuntime.hpp  main.hpp
scripts/: build.ps1  createqmod.ps1
src/: VivifyRuntime.cpp  main.cpp
